@@ -434,50 +434,3 @@ void QXmppStanza::parse(const QDomElement &element)
         m_error.parse(errorElement);
 }
 
-// deprecated
-
-QString QXmppStanza::Error::getText() const
-{
-    return m_text;
-}
-
-int QXmppStanza::Error::getCode() const
-{
-    return m_code;
-}
-
-QXmppStanza::Error::Condition QXmppStanza::Error::getCondition() const
-{
-    return m_condition;
-}
-
-QXmppStanza::Error::Type QXmppStanza::Error::getType() const
-{
-    return m_type;
-}
-
-QString QXmppStanza::getTo() const
-{
-    return m_to;
-}
-
-QString QXmppStanza::getFrom() const
-{
-    return m_from;
-}
-
-QString QXmppStanza::getId() const    
-{
-    return m_id;
-}
-
-QString QXmppStanza::getLang() const    
-{
-    return m_lang;
-}
-
-QXmppStanza::Error QXmppStanza::getError() const
-{
-    return m_error;
-}
-
