@@ -104,13 +104,6 @@ public:
         /// \cond
         void parse(const QDomElement &element);
         void toXml(QXmlStreamWriter *writer) const;
-
-        // deprecated in release 0.2.0
-        // deprecated accessors, use the form without "get" instead
-        int Q_DECL_DEPRECATED getCode() const;
-        QString Q_DECL_DEPRECATED getText() const;
-        Condition Q_DECL_DEPRECATED getCondition() const;
-        Type Q_DECL_DEPRECATED getType() const;
         /// \endcond
 
     private:
@@ -150,14 +143,6 @@ public:
     /// \cond
     // FIXME : why is this needed?
     bool isErrorStanza();
-
-    // deprecated in release 0.2.0
-    // deprecated accessors, use the form without "get" instead
-    QString Q_DECL_DEPRECATED getTo() const;  
-    QString Q_DECL_DEPRECATED getFrom() const;
-    QString Q_DECL_DEPRECATED getId() const;    
-    QString Q_DECL_DEPRECATED getLang() const;    
-    QXmppStanza::Error Q_DECL_DEPRECATED getError() const;
 
 protected:
     void generateAndSetNextId();
